* Tue Jul 23 2019 Chris Tessmer <chris.tessmer@onyxpoint.com> - 0.1.0-0
- Add REFERENCE.md for Puppet Forge

* Thu Jun 06 2019 Steven Pritchard <steven.pritchard@onyxpoint.com> - 0.1.0-0
- Add v2 compliance_markup data
- Add support for puppetlabs-stdlib 6

* Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.4-0
- Update the upper bound of stdlib to < 6.0.0
- Update a URL in the README.md

* Tue Dec 11 2018 Adam Yohrling <adam.yohrling@onyxpoint.com> - 0.0.4-0
- Add source parameter to be able to specify a file for use directly
  within hiera data

* Wed Nov 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.3-0
- Update static assets
- Update to onyxpoint OEL boxes in acceptance tests
- Update badges in README.md

* Mon Jun 25 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 0.0.3-0
- Removed the static banners from the module and tied the module to the
  `simp/simp_banners` module
- Add support for OEL and Puppet 5

* Thu Jul 06 2017 Liz Nemsick <lnemsick.simp@gmail.com> - 0.0.2-0
- Update puppet dependency and remove OBE pe dependency in metadata.json

* Thu Dec 15 2016 Nick Miller <nick.miller@onyxpoint.com> - 0.0.1
- First cut